app/assets/stylesheets/common/home.scss
/* HOME */

.home {
  text-align:center;
  margin-top:10px;
  margin-bottom:15px;
  padding:25px;
}

.home-stats {
  font-size:16px;
  margin-bottom:10px;
}

.home-stats .left {
  text-align:right;
  padding-left:10px;
  padding-right:15px;
  font-weight:bold;
  font-size:18px;
}

.home-stats .right {
  text-align:left;
  padding-right:15px;
}

.home-stats .top {
  padding-top:5px;
}

.home-stats .bottom {
  padding-bottom:5px;
}

